k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      imagePullSecrets:
      - name: ghcr-credentials
      containers:
      - name: fastapi
        image: ghcr.io/onnya/stock_exchange:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: env-volume
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: env-volume
        configMap:
          name: fastapi-env

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: fastapi
  type: ClusterIP
